--- a/js/taskgroup2/task2/index.html
+++ b/js/taskgroup2/task2/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./array.js"></script>
+    <script src="./conditionals.js"></script>
 </body>
 </html>
